{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 139,
  "lineage": "4a3a0c82-6e8f-f145-957f-c794b733b5c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eac25772cd4e36",
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:instance/i-09a1a50677c1ce6e1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a1a50677c1ce6e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eeb71dcbc6e5bb77",
            "private_dns": "ip-10-0-1-17.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0acbcaf77f2332bd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022c2c064a6b6c269",
            "tags": {
              "Name": "Hello terraform"
            },
            "tags_all": {
              "Name": "Hello terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058b4fadb7d8ff93c"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.tf-example-public-ap-southeast-1",
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-example-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:internet-gateway/igw-006c68e11c8332bdd",
            "id": "igw-006c68e11c8332bdd",
            "owner_id": "654799634307",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            },
            "vpc_id": "vpc-0ceee132475682120"
          },
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-example-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:route-table/rtb-0d80c5e9a59c7bb54",
            "id": "rtb-0d80c5e9a59c7bb54",
            "owner_id": "654799634307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006c68e11c8332bdd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-example-rt-2"
            },
            "tags_all": {
              "Name": "tf-example-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceee132475682120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-example-igw",
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:security-group/sg-058b4fadb7d8ff93c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-058b4fadb7d8ff93c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-terraform-sg",
            "name_prefix": "",
            "owner_id": "654799634307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceee132475682120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-example-private-ap-southeast-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:subnet/subnet-0898a8ef9c8dfd1ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0898a8ef9c8dfd1ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654799634307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-example-private-ap-southeast-1"
            },
            "tags_all": {
              "Name": "tf-example-private-ap-southeast-1"
            },
            "vpc_id": "vpc-0ceee132475682120"
          },
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:subnet/subnet-0acad767d1075e74c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acad767d1075e74c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654799634307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-example-private-ap-southeast-2"
            },
            "tags_all": {
              "Name": "tf-example-private-ap-southeast-2"
            },
            "vpc_id": "vpc-0ceee132475682120"
          },
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-example-public-ap-southeast-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:subnet/subnet-022c2c064a6b6c269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022c2c064a6b6c269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654799634307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-example-public-ap-southeast-1"
            },
            "tags_all": {
              "Name": "tf-example-public-ap-southeast-1"
            },
            "vpc_id": "vpc-0ceee132475682120"
          },
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:subnet/subnet-08749f4ae0164fa4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08749f4ae0164fa4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654799634307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-example-public-ap-southeast-2"
            },
            "tags_all": {
              "Name": "tf-example-public-ap-southeast-2"
            },
            "vpc_id": "vpc-0ceee132475682120"
          },
          "dependencies": [
            "aws_vpc.tf-test-15"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-test-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654799634307:vpc/vpc-0ceee132475682120",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036d5941efc7023b9",
            "default_route_table_id": "rtb-0f3a9b506cde4419c",
            "default_security_group_id": "sg-08d9523ac4fbc0e55",
            "dhcp_options_id": "dopt-0c4084ab00b831e38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ceee132475682120",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3a9b506cde4419c",
            "owner_id": "654799634307",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            }
          }
        }
      ]
    }
  ]
}